--- a/library-frontend/src/main/resources/templates/users/detail.html
+++ b/library-frontend/src/main/resources/templates/users/detail.html
@@ -67,8 +67,8 @@
               <td th:text="${loan.book.title()}">Buchtitel</td>
               <td th:text="${loan.book.author()}">Autor</td>
               <td th:text="${loan.book.isbn()}">ISBN</td>
-              <td th:text="${loan.getBorrowedAtFormatted()}">Borrowed At</td>
-              <td th:text="${loan.getReturnedAtFormatted()}">Returned At</td>
+              <td th:text="${loan.getBorrowedAtFormatted()}">Ausgeliehen am</td>
+              <td th:text="${loan.getReturnedAtFormatted()}">Zurückgegeben am</td>
             </tr>
             </tbody>
           </table>
